<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidSvgNaviMap</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="sample_scan_start_button_text">Start Scan</string>
    <string name="sample_scan_stop_button_text">Stop WiFi Scan</string>
    <string name="sample_scan_scanning_text">Scanning…</string>
    <string name="sample_scan_scanning_and_calcing_text">Scanning and calulating position…</string>
    <string name="sample_scan_start_scan_failed">Starting the Scan failed!</string>
    <string name="sample_scan_enableing_wifi">WiFi is currently disabled, trying to enable it.</string>
    <string name="sample_scan_enableing_wifi_failed">Could not enable WiFi!</string>
    <string name="sample_scan_text_start">To start a WiFi scan, press the start
		button!\nThese are the last scan results:</string>
    <string name="sample_scan_stopped">\nWiFi scan stopped.</string>
    <string name="sample_scan_wifi_capabilities">Capabilities</string>
    <string name="sample_scan_wifi_ssid">SSID</string>
    <string name="sample_scan_wifi_bssid">BSSID</string>
    <string name="sample_scan_wifi_rssi">RSSI</string>
    <string name="sample_scan_wifi_frequency">Frequency</string>
    <string name="sample_scan_scan_finished">\nWiFi scan finished!</string>
    <string name="sample_scan_wifi_state">WiFi state: </string>
    <string name="sample_scan_supplicant_state">WiFi supplicant state: </string>
    <string name="enableingWiFiSucceed">WiFi successfully enabled</string>


    <string-array name="wifi_states">
        <item>WiFi is being disabled</item>
        <item>WiFi disabled</item>
        <item>WiFi is being enabled</item>
        <item>WiFi is enabled</item>
        <item>WiFi state is unknown</item>
    </string-array>

    <!-- end: sample scan -->
    <string name="locate_service_description">The service used to provide localization.</string>
    <string name="menu_locate">Locate</string>
    <string name="menu_toggle_learning_mode">Learning mode</string>
    <string name="menu_levelup">Level up</string>
    <string name="menu_leveldown">Level down</string>
    <string name="menu_setdestination">Set destination</string>
    <string name="menu_scanqr">Scan QR</string>
    <string name="menu_navigate">Navigate</string>
    <string-array name="weka_algorithms">
        <item>Vote</item>
        <item>Random Tree</item>
        <item>Fast Random Tree</item>
        <item>Naive Bayes</item>
        <item>K Nearest Neighbourhood</item>
    </string-array>
    <string-array name="weka_algorithms_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
